# funding_arbitrage

./: CMakeLists.txt  README.md  funding_rate_analysis.csv  structure.txt
config/: config.json
src/: demo.py
src/common/config/: config.cpp  config.h
src/common/logger/: logger.cpp  logger.h
src/common/utils/: rate_limiter.h
src/demo/: config.py  main.py  position_manager.py  requirements.txt  trading_logic.py  websocket_manager.py
src/demo/config/: trading_config.yml
src/market/api/: api_base.h  binance_api.cpp  binance_api.h  websocket_base.h  websocket_client.cpp  websocket_client.h  websocket_event.cpp  websocket_event.h
src/market/types/: execution_types.h
src/monitor/alerts/: alert_manager.cpp  alert_manager.h  alert_types.h
src/monitor/metrics/: monitor_service.cpp  monitor_service.h  prometheus_exporter.cpp  prometheus_exporter.h
src/strategy/engine/: arbitrage_engine.cpp  arbitrage_engine.h  strategy_engine.h
src/strategy/types/: funding_arbitrage_types.h  performance_types.h  strategy_types.h
src/trading/execution/: order_manager.cpp  order_manager.h
src/trading/position/: position_manager.cpp  position_manager.h
src/trading/risk/: risk_manager.cpp  risk_manager.h  risk_types.h
tests/: CMakeLists.txt
tests/mock/: mock_binance_api.h
tests/unit/api/: test_binance_api.cpp  test_websocket_client.cpp
tests/unit/unit/: test_logger.cpp
